fix spacing bugs on project case study page

--- a/src/components/Pages/Projects/ProjectsDetail/ProjectDetail.css
+++ b/src/components/Pages/Projects/ProjectsDetail/ProjectDetail.css
@@ -10,9 +10,7 @@
     margin-bottom: 10px;
   }
   
-  .project-details {
-    margin-top: 20px;
-  }
+ 
   
   /* .project-details h2 {
     color: var(--med-green);
@@ -30,6 +28,7 @@
   
   .project-details li {
     margin-bottom: 5px;
+
   }
 
   .project-features {
@@ -44,6 +43,7 @@
   }
 
   .project-header{
+    margin-top: 0px;
     padding: 5%;
     background-color: var(--med-green)
   }
